--- a/src/shared/localization/ru.json
+++ b/src/shared/localization/ru.json
@@ -3,7 +3,7 @@
     "intro": "Главная",
     "aboutMe": "Обо мне",
     "skills": "Навыки",
-    "portfolio": "Портфолио",
+    "portfolio": "Проекты",
     "contact": "Контакты"
   },
   "intro": {
