--- a/src/shared/localization/ru.json
+++ b/src/shared/localization/ru.json
@@ -9,19 +9,28 @@
   "intro": {
     "title": "Привeт*_Я Екатерина,_<Front-End Разработчик/>",
     "location": "Санкт-Петербург",
-    "reachMe": "Написать",
+    "reachMe": "Контакты",
     "cv": "CV"
   },
   "aboutMe": {
-    "title": "Обо мне"
+    "title": "Обо мне",
+    "text": "\uD83D\uDC23 Я Ларионова Екатерина, front-end разработчик из Санкт-Петербурга. На данный момент работаю на позиции middle.\n\n\uD83D\uDC69\uD83C\uDFFC\u200D\uD83D\uDCBB Последние 4 года активно погружена в веб-разработку.\n\n\uD83D\uDCDA Имею высшее образование по специальности \"Информационная безопасность\".\n\n✨ Я специализируюсь на создании красивого и надежного внешнего интерфейса для различных cервисов и приложений. Произвожу реализацию от макета (Figma) до выпуска в промышленную эксплуатацию. Работала на проектах как в команде frontend-разработчиков, так и в одиночку.\n\n\uD83E\uDE90 Я постоянно расширяю свой набор навыков, осваивая новые технологии.\n\n\uD83D\uDCCA С более детальной информацией о моем опыте вы сможете ознакомиться в <a href='http://localhost:3000/static/media/CV.ea53b2f27fd76a054450.pdf' target='_blanc'>резюме</a>."
   },
   "skills": {
-    "title": "Мои навыки"
+    "title": "Мой стек"
   },
   "portfolio": {
-    "title": "Портфолио"
+    "title": "Проекты",
+    "gazprom": {
+      "title": "Отраслевая олимпиада школьников Газпром",
+      "description": "✅ Самостоятельно разработала дизайн всей системы (Личный кабинет участника и лендинг)\n\n✅ Согласование с заказчиком всех деталей бизнес-логики\n\n✅ Разработала новую архитектуру фронтенда\n\n ✅ Переписала фронтенд с legacy фреймворка Backbone.js на Vue.js"
+    },
+    "domains": {
+      "title": "Страница Домены и подборщик доменов",
+      "description": "✅ Верстка страницы\n\n✅ Разработка интеллектуального помощника, который предлагает оригинальные свободные доменные имена\n\n✅ Логика форматирования введенного пользователем текста полностью реализована на фронтенде с использованием принципов ООП\n\n✅ Подборщик реализован модульно и может быть использован в других проектах\n\n ✅ На данный момент одна из популярных фич у клиентов"
+    }
   },
   "contacts": {
-    "title": "Напиши мне"
+    "title": "Контакты"
   }
 }
